tests/errors/MultipleVarDecl.java
class MultipleVarDecl
{
    public static void main(String[] a)
    {
		System.out.println(new Test().exec());
    }
}

class Test
{
	public int exec()
	{
		int x;
		boolean x;
		
		return 0;
	}
}
